== 1.6.1

* (mvz) Fix regression in rake task: Provide alias for backward compatibility

== 1.6.0

* (troessner) Revise configuration handling:
  Now there are 3 ways of passing reek a configuration file:
  - Using the cli "-c" switch
  - Having a file ending with .reek either in your current working directory or in a parent directory (more on that later)
  - Having a file ending with .reek in your HOME directory
  The order in which reek tries to find such a configuration file is exactly like above: First reek checks if we have given it a configuration file explicitly via CLI. Then it checks the current working directory for a file and if it can't find one, it traverses up the directories until it hits the root directory. And lastly, it checks your HOME directory.
  As soon as reek detects a configuration file it stops searching immediately, meaning that from reek's point of view there exists one configuration file and one configuration only regardless of how many ".reek" files you might have on your filesystem.
* (chastell) Add keyword arguments support after switching to 'parser'
* (mvz) Handle nil-block in iterators

== 1.5.0

* (mvz) Parse with the parse gem
* (mvz) Add ModuleInitialize smell

== 1.4.0

* (Gilles Leblanc) Corrects UnusedParameter with keyword arguments with splat
* (mvz) Consider block parameter for DuplicateMethodCall
* (mvz) Add support for detecting specific smells
* (troessner) Add ultra verbose warning formatter.

== 1.3.8

* Internal improvements

== 1.3.7

* (gilles-leblanc) Add color to reek's output
* (mvz) Ignore unused parameters if method calls super in nested context
* (mvz) Only mark parameters uncommunicative if used

== 1.3.6

* (troessner) Add `Prima Donna Method` smell

== 1.3.5

* (troessner) Allow sorting by issue count
* (mvz) Improve cli options

== 1.3.4

* (apiology) Add --single-line option for reporting
* (gilles-leblanc) Allow config files to override default config values